syntax = "proto3";

import "shared.proto";

package users;

service UsersService {
  rpc create (CreateUserDto) returns (UserResponse) {}
  rpc update (User) returns (UserResponse) {}
  rpc remove (FindUserDto) returns (UserResponse) {}
  rpc findOne (FindUserDto) returns (UserResponse) {}
  rpc findAll (shared.Empty) returns (Users) {}
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  bool isActive = 4;
}

message CreateUserDto {
  string username = 1;
  string password = 2;
}

message UserResponse {
  optional User user = 1;
}

message FindUserDto {
  oneof searchProp {
    string id = 1;
    string username = 2;
  }
}

message Users {
  repeated User users = 1;
}
